Bug 1918907: Don't clear drag session target BrowserChild on eDragLeave/eDragExit  a=diannaS

The BrowserChild should only be cleared on EndDragSession, which is sent when
the user finishes or cancels dragging. This is reciprocal to it being set in
StartDragSession.

The change to nsDragSessionProxy::EndDragSessionImpl is non-functional -- it
highlights the BrowserChild symmetry above.

Original Revision: https://phabricator.services.mozilla.com/D222389

Differential Revision: https://phabricator.services.mozilla.com/D222949